[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/PracticeStage.gd" type="Script" id=1]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/DungeonTiles.tres" type="TileSet" id=3]
[ext_resource path="res://Objects/Interface.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/8 Bit Go! Action Video Game Rock Music by HeatleyBros.wav" type="AudioStream" id=5]
[ext_resource path="res://Levels/OneWayTiles/OneWayTiles.tres" type="TileSet" id=6]
[ext_resource path="res://Sprites/Levels/Dungeon/DungeonBackground.png" type="Texture" id=7]
[ext_resource path="res://Objects/Enemy.tscn" type="PackedScene" id=8]
[ext_resource path="res://Objects/BasicTarget.tscn" type="PackedScene" id=9]
[ext_resource path="res://NiceFont.tres" type="DynamicFont" id=10]
[ext_resource path="res://Objects/Pause.tscn" type="PackedScene" id=11]
[ext_resource path="res://Objects/MPSpawn.tscn" type="PackedScene" id=12]
[ext_resource path="res://Objects/Screenshake.tscn" type="PackedScene" id=13]

[node name="PracticeStage" type="Node2D"]
script = ExtResource( 1 )

[node name="DungeonBackground" type="Sprite" parent="."]
position = Vector2( 380.131, 179.349 )
texture = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 28, 0, 47, 20, 0, 65536, 28, 0, 65583, 20, 0, 131072, 28, 0, 131119, 20, 0, 196608, 28, 0, 196655, 20, 0, 262144, 28, 0, 262191, 20, 0, 327680, 28, 0, 327727, 20, 0, 393216, 28, 0, 393263, 20, 0, 458752, 28, 0, 458799, 20, 0, 524288, 28, 0, 524335, 20, 0, 589824, 28, 0, 589871, 20, 0, 655360, 28, 0, 655407, 20, 0, 720896, 28, 0, 720943, 20, 0, 786432, 28, 0, 786479, 20, 0, 851968, 28, 0, 852015, 20, 0, 917504, 28, 0, 917551, 20, 0, 983040, 28, 0, 983087, 20, 0, 1048576, 28, 0, 1048623, 20, 0, 1114112, 28, 0, 1114159, 20, 0, 1179648, 28, 0, 1179695, 20, 0, 1245184, 28, 0, 1245231, 20, 0, 1310720, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1310743, 1, 0, 1310744, 1, 0, 1310745, 1, 0, 1310746, 1, 0, 1310747, 1, 0, 1310748, 1, 0, 1310749, 1, 0, 1310750, 1, 0, 1310751, 1, 0, 1310752, 1, 0, 1310753, 1, 0, 1310754, 1, 0, 1310755, 1, 0, 1310756, 1, 0, 1310757, 1, 0, 1310758, 1, 0, 1310759, 1, 0, 1310760, 1, 0, 1310761, 1, 0, 1310762, 1, 0, 1310763, 1, 0, 1310764, 1, 0, 1310765, 1, 0, 1310766, 1, 0, 1310767, 1, 0, 1376256, 27, 0, 1376257, 27, 0, 1376258, 27, 0, 1376259, 27, 0, 1376260, 27, 0, 1376261, 27, 0, 1376262, 27, 0, 1376263, 27, 0, 1376264, 27, 0, 1376265, 27, 0, 1376266, 27, 0, 1376267, 27, 0, 1376268, 27, 0, 1376269, 27, 0, 1376270, 27, 0, 1376271, 27, 0, 1376272, 27, 0, 1376273, 27, 0, 1376274, 27, 0, 1376275, 27, 0, 1376276, 27, 0, 1376277, 27, 0, 1376278, 27, 0, 1376279, 27, 0, 1376280, 27, 0, 1376281, 27, 0, 1376282, 27, 0, 1376283, 27, 0, 1376284, 27, 0, 1376285, 27, 0, 1376286, 27, 0, 1376287, 27, 0, 1376288, 27, 0, 1376289, 27, 0, 1376290, 27, 0, 1376291, 27, 0, 1376292, 27, 0, 1376293, 27, 0, 1376294, 27, 0, 1376295, 27, 0, 1376296, 27, 0, 1376297, 27, 0, 1376298, 27, 0, 1376299, 27, 0, 1376300, 27, 0, 1376301, 27, 0, 1376302, 27, 0, 1376303, 27, 0, 1441792, 1, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 1, 0, 1441805, 1, 0, 1441806, 1, 0, 1441807, 1, 0, 1441808, 1, 0, 1441809, 1, 0, 1441810, 1, 0, 1441811, 1, 0, 1441812, 1, 0, 1441813, 1, 0, 1441814, 1, 0, 1441815, 1, 0, 1441816, 1, 0, 1441817, 1, 0, 1441818, 1, 0, 1441819, 1, 0, 1441820, 1, 0, 1441821, 1, 0, 1441822, 1, 0, 1441823, 1, 0, 1441824, 1, 0, 1441825, 1, 0, 1441826, 1, 0, 1441827, 1, 0, 1441828, 1, 0, 1441829, 1, 0, 1441830, 1, 0, 1441831, 1, 0, 1441832, 1, 0, 1441833, 1, 0, 1441834, 1, 0, 1441835, 1, 0, 1441836, 1, 0, 1441837, 1, 0, 1441838, 1, 0, 1441839, 1, 0 )

[node name="TileMapOneWay" type="TileMap" parent="."]
position = Vector2( 27.1614, 241.637 )
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Interface" parent="CanvasLayer" instance=ExtResource( 4 )]
margin_left = 445.432
margin_top = 208.472
margin_right = 485.432
margin_bottom = 248.472

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 175.022, 189.679 )

[node name="CollisionShape2D" parent="Player" index="1"]
position = Vector2( -0.0904614, 0.41297 )

[node name="PlayerCamera" parent="Player" index="7"]
position = Vector2( 278.506, -152.705 )

[node name="StageMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="SpawnPoint" type="Position2D" parent="."]
position = Vector2( 383.306, 117.803 )

[node name="SpawnPoint2" type="Position2D" parent="."]
position = Vector2( 92.932, 127.303 )

[node name="Enemy" parent="." instance=ExtResource( 8 )]
position = Vector2( 595.671, 158.506 )
speed = 40
hp = 5
size = Vector2( 2, 2 )

[node name="Spawner" parent="." instance=ExtResource( 9 )]
position = Vector2( 42.9388, 218.099 )

[node name="Label" type="Label" parent="."]
margin_left = 18.7915
margin_top = 157.453
margin_right = 117.791
margin_bottom = 202.453
custom_fonts/font = ExtResource( 10 )
text = "Headbutt this
to spawn 
more slimes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 100.791
margin_top = 157.453
margin_right = 199.791
margin_bottom = 202.453
custom_fonts/font = ExtResource( 10 )
text = "Headbutt this
to spawn 
more mana"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MPSpawn" parent="." instance=ExtResource( 12 )]
position = Vector2( 141.867, 218.099 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Pause" parent="CanvasLayer2" instance=ExtResource( 11 )]
visible = false

[node name="Screenshake" parent="." instance=ExtResource( 13 )]
[connection signal="block_used" from="Player" to="CanvasLayer/Interface" method="_on_Player_block_used"]
[connection signal="health_changed" from="Player" to="CanvasLayer/Interface" method="_on_Player_health_changed"]
[connection signal="magicaian_basic_blast_used" from="Player" to="Player" method="_on_Player_magicaian_basic_blast_used"]
[connection signal="magicaian_dash_used" from="Player" to="CanvasLayer/Interface" method="_on_Player_magicaian_dash_used"]
[connection signal="magicaian_spinning_blast_used" from="Player" to="CanvasLayer/Interface" method="_on_Player_magicaian_spinning_blast_used"]
[connection signal="magicaian_ultimate_blast_used" from="Player" to="CanvasLayer/Interface" method="_on_Player_magicaian_ultimate_blast_used"]
[connection signal="mana_changed" from="Player" to="CanvasLayer/Interface" method="_on_Player_mana_changed"]
[connection signal="spawn_enemy" from="Spawner" to="." method="_on_BasicTarget_spawn_enemy"]
[connection signal="spawn_mana" from="MPSpawn" to="." method="_on_MPSpawn_spawn_mana"]

[editable path="Player"]
